Added health endpoint, added migration script that adds a new board upon intialization
